trunk/vorescompilerproejkt,bemærkstieribatfilerskalændresogstienitypecheckerenskalogså/spladParser/SPLADParser.java
// Generated from SPLAD.g4 by ANTLR 4.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SPLADParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__48=1, T__47=2, T__46=3, T__45=4, T__44=5, T__43=6, T__42=7, T__41=8, 
		T__40=9, T__39=10, T__38=11, T__37=12, T__36=13, T__35=14, T__34=15, T__33=16, 
		T__32=17, T__31=18, T__30=19, T__29=20, T__28=21, T__27=22, T__26=23, 
		T__25=24, T__24=25, T__23=26, T__22=27, T__21=28, T__20=29, T__19=30, 
		T__18=31, T__17=32, T__16=33, T__15=34, T__14=35, T__13=36, T__12=37, 
		T__11=38, T__10=39, T__9=40, T__8=41, T__7=42, T__6=43, T__5=44, T__4=45, 
		T__3=46, T__2=47, T__1=48, T__0=49, ARRAYCALL=50, STRINGTOKEN=51, LETTER=52, 
		DIGIT=53, NOTZERODIGIT=54, COMMENT=55, WS=56, OTHER=57;
	public static final String[] tokenNames = {
		"<INVALID>", "'from'", "']'", "'using'", "'default'", "','", "'-'", "'*'", 
		"'['", "'while'", "'('", "':'", "'if'", "'int'", "'<'", "'false'", "'!='", 
		"'<='", "'to'", "'double'", "'break'", "'OR'", "'nothing'", "'else'", 
		"'HIGH'", "'true'", "'char'", "'case'", "'AND'", "'.'", "'bool'", "')'", 
		"'function'", "'step'", "'+'", "'='", "'return'", "';'", "'container'", 
		"'>'", "'call'", "'string'", "'begin'", "'switch'", "'/'", "'>='", "'end'", 
		"'!'", "'LOW'", "'<--'", "ARRAYCALL", "STRINGTOKEN", "LETTER", "DIGIT", 
		"NOTZERODIGIT", "COMMENT", "WS", "' '"
	};
	public static final int
		RULE_program = 0, RULE_roots = 1, RULE_root = 2, RULE_dcl = 3, RULE_type = 4, 
		RULE_primitivetype = 5, RULE_arraytype = 6, RULE_id = 7, RULE_assign = 8, 
		RULE_assignend = 9, RULE_expr = 10, RULE_term = 11, RULE_comp = 12, RULE_addsub = 13, 
		RULE_muldiv = 14, RULE_factor = 15, RULE_callid = 16, RULE_arrayiden = 17, 
		RULE_numeric = 18, RULE_addsubend = 19, RULE_muldivend = 20, RULE_timesdivide = 21, 
		RULE_plusminusorempty = 22, RULE_plusminus = 23, RULE_numericend = 24, 
		RULE_string = 25, RULE_functioncall = 26, RULE_callexpr = 27, RULE_subcallexpr = 28, 
		RULE_subcallexprend = 29, RULE_cast = 30, RULE_compend = 31, RULE_comparisonoperator = 32, 
		RULE_termend = 33, RULE_termsymbol = 34, RULE_exprend = 35, RULE_exprsymbol = 36, 
		RULE_function = 37, RULE_functionmid = 38, RULE_functionend = 39, RULE_params = 40, 
		RULE_subparams = 41, RULE_subparamsend = 42, RULE_stmts = 43, RULE_stmt = 44, 
		RULE_nontermif = 45, RULE_endif = 46, RULE_nontermelse = 47, RULE_nontermwhile = 48, 
		RULE_from = 49, RULE_nontermswitch = 50, RULE_cases = 51, RULE_endcase = 52, 
		RULE_breakend = 53;
	public static final String[] ruleNames = {
		"program", "roots", "root", "dcl", "type", "primitivetype", "arraytype", 
		"id", "assign", "assignend", "expr", "term", "comp", "addsub", "muldiv", 
		"factor", "callid", "arrayiden", "numeric", "addsubend", "muldivend", 
		"timesdivide", "plusminusorempty", "plusminus", "numericend", "string", 
		"functioncall", "callexpr", "subcallexpr", "subcallexprend", "cast", "compend", 
		"comparisonoperator", "termend", "termsymbol", "exprend", "exprsymbol", 
		"function", "functionmid", "functionend", "params", "subparams", "subparamsend", 
		"stmts", "stmt", "nontermif", "endif", "nontermelse", "nontermwhile", 
		"from", "nontermswitch", "cases", "endcase", "breakend"
	};

	@Override
	public String getGrammarFileName() { return "SPLAD.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public SPLADParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public RootsContext roots() {
			return getRuleContext(RootsContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108); roots();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RootsContext extends ParserRuleContext {
		public RootContext root() {
			return getRuleContext(RootContext.class,0);
		}
		public RootsContext roots() {
			return getRuleContext(RootsContext.class,0);
		}
		public RootsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_roots; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitRoots(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootsContext roots() throws RecognitionException {
		RootsContext _localctx = new RootsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_roots);
		try {
			setState(114);
			switch (_input.LA(1)) {
			case EOF:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 13:
			case 19:
			case 26:
			case 30:
			case 32:
			case 38:
			case 41:
			case LETTER:
			case COMMENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(111); root();
				setState(112); roots();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RootContext extends ParserRuleContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public TerminalNode COMMENT() { return getToken(SPLADParser.COMMENT, 0); }
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public DclContext dcl() {
			return getRuleContext(DclContext.class,0);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_root);
		try {
			setState(124);
			switch (_input.LA(1)) {
			case 13:
			case 19:
			case 26:
			case 30:
			case 38:
			case 41:
				enterOuterAlt(_localctx, 1);
				{
				setState(116); dcl();
				setState(117); match(37);
				}
				break;
			case LETTER:
				enterOuterAlt(_localctx, 2);
				{
				setState(119); assign();
				setState(120); match(37);
				}
				break;
			case 32:
				enterOuterAlt(_localctx, 3);
				{
				setState(122); function();
				}
				break;
			case COMMENT:
				enterOuterAlt(_localctx, 4);
				{
				setState(123); match(COMMENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DclContext extends ParserRuleContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dcl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitDcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DclContext dcl() throws RecognitionException {
		DclContext _localctx = new DclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_dcl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126); type();
			setState(127); assign();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public ArraytypeContext arraytype() {
			return getRuleContext(ArraytypeContext.class,0);
		}
		public PrimitivetypeContext primitivetype() {
			return getRuleContext(PrimitivetypeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129); primitivetype();
			setState(130); arraytype();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimitivetypeContext extends ParserRuleContext {
		public PrimitivetypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitivetype; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitPrimitivetype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimitivetypeContext primitivetype() throws RecognitionException {
		PrimitivetypeContext _localctx = new PrimitivetypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_primitivetype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 13) | (1L << 19) | (1L << 26) | (1L << 30) | (1L << 38) | (1L << 41))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArraytypeContext extends ParserRuleContext {
		public TerminalNode NOTZERODIGIT() { return getToken(SPLADParser.NOTZERODIGIT, 0); }
		public ArraytypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arraytype; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitArraytype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArraytypeContext arraytype() throws RecognitionException {
		ArraytypeContext _localctx = new ArraytypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_arraytype);
		try {
			setState(138);
			switch (_input.LA(1)) {
			case 8:
				enterOuterAlt(_localctx, 1);
				{
				setState(134); match(8);
				setState(135); match(NOTZERODIGIT);
				setState(136); match(2);
				}
				break;
			case 3:
			case 10:
			case LETTER:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdContext extends ParserRuleContext {
		public TerminalNode LETTER() { return getToken(SPLADParser.LETTER, 0); }
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_id);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140); match(LETTER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public CallidContext callid() {
			return getRuleContext(CallidContext.class,0);
		}
		public AssignendContext assignend() {
			return getRuleContext(AssignendContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142); callid();
			setState(143); assignend();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignendContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignendContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignend; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitAssignend(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignendContext assignend() throws RecognitionException {
		AssignendContext _localctx = new AssignendContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_assignend);
		try {
			setState(148);
			switch (_input.LA(1)) {
			case 49:
				enterOuterAlt(_localctx, 1);
				{
				setState(145); match(49);
				setState(146); expr();
				}
				break;
			case 18:
			case 37:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprendContext exprend() {
			return getRuleContext(ExprendContext.class,0);
		}
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150); term();
			setState(151); exprend();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public CompContext comp() {
			return getRuleContext(CompContext.class,0);
		}
		public TermendContext termend() {
			return getRuleContext(TermendContext.class,0);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitTerm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_term);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153); comp();
			setState(154); termend();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompContext extends ParserRuleContext {
		public AddsubContext addsub() {
			return getRuleContext(AddsubContext.class,0);
		}
		public CompendContext compend() {
			return getRuleContext(CompendContext.class,0);
		}
		public CompContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comp; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitComp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompContext comp() throws RecognitionException {
		CompContext _localctx = new CompContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_comp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156); addsub();
			setState(157); compend();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddsubContext extends ParserRuleContext {
		public MuldivContext muldiv() {
			return getRuleContext(MuldivContext.class,0);
		}
		public AddsubendContext addsubend() {
			return getRuleContext(AddsubendContext.class,0);
		}
		public AddsubContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addsub; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitAddsub(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AddsubContext addsub() throws RecognitionException {
		AddsubContext _localctx = new AddsubContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_addsub);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159); muldiv();
			setState(160); addsubend();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MuldivContext extends ParserRuleContext {
		public MuldivendContext muldivend() {
			return getRuleContext(MuldivendContext.class,0);
		}
		public FactorContext factor() {
			return getRuleContext(FactorContext.class,0);
		}
		public MuldivContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_muldiv; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitMuldiv(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MuldivContext muldiv() throws RecognitionException {
		MuldivContext _localctx = new MuldivContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_muldiv);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162); factor();
			setState(163); muldivend();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FactorContext extends ParserRuleContext {
		public FunctioncallContext functioncall() {
			return getRuleContext(FunctioncallContext.class,0);
		}
		public NumericContext numeric() {
			return getRuleContext(NumericContext.class,0);
		}
		public CastContext cast() {
			return getRuleContext(CastContext.class,0);
		}
		public CallidContext callid() {
			return getRuleContext(CallidContext.class,0);
		}
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public FactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_factor; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitFactor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FactorContext factor() throws RecognitionException {
		FactorContext _localctx = new FactorContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_factor);
		try {
			setState(183);
			switch (_input.LA(1)) {
			case 10:
				enterOuterAlt(_localctx, 1);
				{
				setState(165); match(10);
				setState(166); expr();
				setState(167); match(31);
				}
				break;
			case 47:
				enterOuterAlt(_localctx, 2);
				{
				setState(169); match(47);
				setState(170); match(10);
				setState(171); expr();
				setState(172); match(31);
				}
				break;
			case LETTER:
				enterOuterAlt(_localctx, 3);
				{
				setState(174); callid();
				}
				break;
			case 6:
			case 34:
			case DIGIT:
				enterOuterAlt(_localctx, 4);
				{
				setState(175); numeric();
				}
				break;
			case STRINGTOKEN:
				enterOuterAlt(_localctx, 5);
				{
				setState(176); string();
				}
				break;
			case 40:
				enterOuterAlt(_localctx, 6);
				{
				setState(177); functioncall();
				}
				break;
			case 13:
			case 19:
			case 26:
			case 30:
			case 38:
			case 41:
				enterOuterAlt(_localctx, 7);
				{
				setState(178); cast();
				}
				break;
			case 48:
				enterOuterAlt(_localctx, 8);
				{
				setState(179); match(48);
				}
				break;
			case 24:
				enterOuterAlt(_localctx, 9);
				{
				setState(180); match(24);
				}
				break;
			case 25:
				enterOuterAlt(_localctx, 10);
				{
				setState(181); match(25);
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 11);
				{
				setState(182); match(15);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallidContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public ArrayidenContext arrayiden() {
			return getRuleContext(ArrayidenContext.class,0);
		}
		public CallidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_callid; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitCallid(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CallidContext callid() throws RecognitionException {
		CallidContext _localctx = new CallidContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_callid);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185); id();
			setState(186); arrayiden();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayidenContext extends ParserRuleContext {
		public TerminalNode ARRAYCALL() { return getToken(SPLADParser.ARRAYCALL, 0); }
		public ArrayidenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayiden; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitArrayiden(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayidenContext arrayiden() throws RecognitionException {
		ArrayidenContext _localctx = new ArrayidenContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_arrayiden);
		try {
			setState(190);
			switch (_input.LA(1)) {
			case ARRAYCALL:
				enterOuterAlt(_localctx, 1);
				{
				setState(188); match(ARRAYCALL);
				}
				break;
			case 5:
			case 6:
			case 7:
			case 11:
			case 14:
			case 16:
			case 17:
			case 18:
			case 21:
			case 28:
			case 31:
			case 33:
			case 34:
			case 35:
			case 37:
			case 39:
			case 44:
			case 45:
			case 49:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumericContext extends ParserRuleContext {
		public PlusminusoremptyContext plusminusorempty() {
			return getRuleContext(PlusminusoremptyContext.class,0);
		}
		public TerminalNode DIGIT() { return getToken(SPLADParser.DIGIT, 0); }
		public NumericendContext numericend() {
			return getRuleContext(NumericendContext.class,0);
		}
		public NumericContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numeric; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SPLADVisitor ) return ((SPLADVisitor<? extends T>)visitor).visitNumeric(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumericContext numeric() throws RecognitionException {
		NumericContext _localctx = new NumericContext(_ctx, getState());
		enterRule(_localctx, 36, RULE_numeric);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192); plusminusorempty();
			setState(193); match(DIGIT);
			setState(194); numericend();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddsubendContext extends ParserRuleContext {
		public AddsubContext addsub() {
			return getRuleContext(AddsubContext.class,0);
		}
		public PlusminusContext plusminus() {
			return getRuleContext(PlusminusContext.class,0);
		}
		public AddsubendContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
